--- a/webpages/index.html
+++ b/webpages/index.html
@@ -7,17 +7,132 @@
     <link rel="stylesheet" href="../css/mainpage.css" type="text/css">
 </head>
 <body>
-    <header> 
-        <ul class="headerList">
-            <li><a class="headerItems" href="info.html">Info</a></li>
-            <li><a class="headerItems" href="aboutUS.html">About Us</a></li>
+    <main>
+        <header> 
+            <ul class="headerList">
+                <li class="dropdown">
+                    <a class="headerItems" href="#">Info</a>
+                    <ul class="dropdownMenu">
+                        <li><a href="cast.html">Cast</a></li>
+                        <li><a href="storyInfo.html">Story</a></li>
+                    </ul>
+                </li>
+            <li><a class="headerItems" href="aboutUs.html">About Us</a></li>
             <li><a class="headerItems" href="reviews.html">Reviews</a></li>
-        </ul>
-        
-    </header>
+            </ul>
+        </header>
 
     <h1 class="title">Mindbound</h1>
-    <img src="../img/image 1.png" alt="backgroundImage" class="bgImg">
-    
+    <img src="../img/headerImg.png" alt="headerImage" class="headerImg">
+
+    <div class="middleBlock">
+        <h2 class="secondTitle">Our books</h2>
+
+        <!-- Main Series -->
+        <div class="bookStack">
+            <a href="https://www.wattpad.com/story/368390914-mindbound-inaugurate" class="bookOneCover">
+                <img src="../img/bookCover.png" alt="msbookOneCover">
+            </a>
+            <a href="#" class="bookTwoCover">
+                <img src="../img/bookCover.png" alt="msbookTwoCover">
+            </a>
+            <a href="#" class="bookThreeCover">
+                <img src="../img/bookCover.png" alt="msbookThreeCover">
+            </a>
+        </div>
+        <a class="msText" href="https://www.wattpad.com/story/368390914-mindbound-inaugurate">
+            <p>Main Series</p>
+        </a>
+
+        <!-- Silent Stories -->
+        <div class="bookStack ss">
+            <a href="#" class="bookOneCover">
+                <img src="../img/bookCover.png" alt="ssBookOneCover">
+            </a>
+            <a href="#" class="bookTwoCover">
+                <img src="../img/bookCover.png" alt="ssBookTwoCover">
+            </a>
+            <a href="#" class="bookThreeCover">
+                <img src="../img/bookCover.png" alt="ssBookThreeCover">
+            </a>
+        </div>
+        <a class="ssText" href="https://www.wattpad.com/story/368390914-mindbound-inaugurate">
+            <p>Silent Stories</p>
+        </a>
+
+        <!-- Lost Pages -->
+        <div class="bookStack lp">
+            <a href="#" class="bookOneCover">
+                <img src="../img/bookCover.png" alt="lpBookOneCover">
+            </a>
+            <a href="#" class="bookTwoCover">
+                <img src="../img/bookCover.png" alt="lpBookTwoCover">
+            </a>
+            <a href="#" class="bookThreeCover">
+                <img src="../img/bookCover.png" alt="lpBookThreeCover">
+            </a>
+        </div>
+        <a class="lpText" href="https://www.wattpad.com/story/368390914-mindbound-inaugurate">
+            <p>Lost Pages</p>
+        </a>
+    </div>
+
+
+    <footer>
+        <div class="footerContainer">
+            <div class="footerTekst">
+                <a href="https://discord.gg/Aw5rpJ3DN6">
+                     <img src="../img/dcLogo.png" alt="discordLogo" class="dcLogo">
+                </a>
+            </div>
+            <img src="../img/footerImg.png" alt="footerImage" class="footerImg">
+        </div>
+    </footer>
+
+    </main>
 </body>
 </html>
+
+<script>
+let lastScrollY = window.scrollY;
+const header = document.querySelector("header");
+
+window.addEventListener("scroll", () => 
+{
+  if (window.scrollY > lastScrollY) 
+  {
+    header.classList.add("hidden");
+  } 
+  
+  else 
+  {
+    header.classList.remove("hidden");
+  }
+
+  lastScrollY = window.scrollY;
+});
+
+document.querySelectorAll('.dropdown > a').forEach(link => 
+{
+  link.addEventListener('click', e => 
+  {
+    e.preventDefault(); // voorkomt navigatie
+
+    const menu = link.nextElementSibling; // ul.dropdownMenu
+    menu.classList.toggle('open');        // toggle open-class
+  });
+});
+
+// Klik buiten sluit open dropdowns
+document.addEventListener('click', e => 
+{
+  document.querySelectorAll('.dropdownMenu.open').forEach(menu => 
+  {
+    if (!menu.parentElement.contains(e.target)) 
+    {
+      menu.classList.remove('open');
+    }
+  });
+});
+
+</script>
