--- a/nationPages/zloyvorPages/castPages/anastasia.html
+++ b/nationPages/zloyvorPages/castPages/anastasia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mindbound</title>
-    <link rel="stylesheet" href="../css/aboutUs.css" type="text/css">
+    <link rel="stylesheet" href="../../cast.css" type="text/css">
     <!-- <link rel="icon" type="image/x-icon" href="../img/saturn.png"> -->
 </head>
 <body>
@@ -14,38 +14,41 @@
                 <li class="dropdown">
                     <a class="info" href="#">Info</a>
                     <ul class="dropdownMenu">
-                        <li><a href="../nationPages/nations.html">Nations</a></li>
-                        <li><a href="webpages/storyInfo.html">Story</a></li>
-                        <li><a href="../index.html">Books</a></li>
+                        <li><a href="../../nations.html">Nations</a></li>
+                        <li><a href="../../nations.html">Story</a></li>
+                        <li><a href="../../../index.html">Books</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
                     <input type="text" id="searchInput" placeholder="Search..." />
                     <ul id="suggestions" class="suggestions"></ul>
                 </li>
-                <li><a class="aboutUs" href="aboutUs.html">About Us</a></li>  
+                <li><a class="aboutUs" href="../../../webpages/aboutUs.html">About Us</a></li>  
             </ul>
         </header>
 
-        <h1 class="mainTitle">Mindbound</h1>
+        <h1 class="mainTitleWhite">Mindbound</h1>
         
-        <img src="../img/headerImg.png" alt="headerImage" class="headerImg">
+        <img src="../zloyvorImg/zloyvorHeader.png" alt="headerImage" class="headerImg">
 
         <div class="middleBlock">
 
-            <a href="javascript:history.back()" class="backButton">&lt;Back</a>
+          <img src="../zloyvorImg/castPlaceholder.png" alt="castImage" class="sideCastImg">
             
-            <h2 class="secondTitle">About us</h2>
+          <h2 class="secondTitle">Anastasia</h2>
 
-            <p class="aboutUsText">We are Kyara and Kai, and we're the creators of Mindbound! This text is just a placeholder 
-                for now to see if everything works, so I'll use this space to yap about our lord and savior, Reve.
-                Reve Nox Craven is a major character in Mindbound, for He will end all our suffering and make all our dreams (And nightmares) come true!
-                It is hard to imagine some might be against Him, for He is all knowing and incredibly charming.
-            </p>
+          <p class="castText">We are Kyara and Kai, and we're the creators of Mindbound! This text is just a placeholder 
+            for now to see if everything works, so I'll use this space to yap about our lord and savior, Reve.
+            Reve Nox Craven is a major character in Mindbound, for He will end all our suffering and make all our dreams (And nightmares) come true!
+            It is hard to imagine some might be against Him, for He is all knowing and incredibly charming.
+          </p>
 
-            <a class="gooberKai" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-            <img class="gooberKai" src="../img/gooberKai.png" alt="KaiSprite">
-            </a>
+          <a href="javascript:history.back()" class="backButton">&lt;Back</a>
+
+          <img src="../zloyvorImg/castFooterPlaceholder.png" alt="fooretCastImage" class="footerCastImg">
+
+        </div>
+
 
         </div>
 
@@ -53,15 +56,15 @@
             <div class="footerContainer">
                 <div class="footerTekst">
                     <a href="https://discord.gg/Aw5rpJ3DN6">
-                        <img src="../img/dcLogo.png" alt="discordLogo" class="dcLogo">
+                        <img src="../../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
-                <img src="../img/footerImg.png" alt="footerImage" class="footerImg">
+                <img src="../zloyvorImg/zloyvorFooter.png" alt="footerImage" class="footerImg">
             </div>
         </footer>
     </main>
 
-<script src="../functions/searchMap.js"></script>
+<script src="../../../functions/searchMap.js"></script>
 
 <script>
 // ====================
