--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 </li>
                 <li class="searchBar">
                     <input type="text" id="searchInput" placeholder="Search..." />
+                    <ul id="suggestions" class="suggestions"></ul>
                 </li>
                 <li><a class="aboutUs" href="webpages/aboutUs.html">About Us</a></li>  
             </ul>
@@ -170,6 +171,32 @@ searchInput.addEventListener("keydown", function(e)
       alert("No results found for: " + query);
     }
   }
+});
+
+// ====================
+// Search suggestions
+// ====================
+
+const input = document.getElementById('searchInput');
+const suggestions = document.getElementById('suggestions');
+
+input.addEventListener('input', () => 
+{
+    const value = input.value.toLowerCase();
+    suggestions.innerHTML = '';
+    if (value) 
+    {
+        const filtered = Object.keys(searchMap).filter(name => name.startsWith(value));
+        filtered.forEach(name => 
+        {
+            const li = document.createElement('li');
+            li.textContent = name;
+            li.addEventListener('click', () => {
+                window.location.href = searchMap[name];
+            });
+            suggestions.appendChild(li);
+        });
+    }
 });
 </script>
 
