--- a/nationPages/altipianiPages/castPages/reve.html
+++ b/nationPages/altipianiPages/castPages/reve.html
@@ -19,8 +19,9 @@
                         <li><a href="../../../index.html">Books</a></li>
                     </ul>
                 </li>
-                <li class="searchBar">
+              <li class="searchBar">
                     <input type="text" id="searchInput" placeholder="Search..." />
+                    <ul id="suggestions" class="suggestions"></ul>
                 </li>
                 <li><a class="aboutUs" href="../../../webpages/aboutUs.html">About Us</a></li>  
             </ul>
@@ -33,18 +34,18 @@
         <div class="middleBlock">
 
           <img src="../altipianiImg/castPlaceholder.png" alt="castImage" class="sideCastImg">
-
-          <a href="javascript:history.back()" class="backButton">&lt;Back</a>
             
-          <h2 class="secondTitle">Reve</h2>
+          <h2 class="secondTitle">Reve Nox Craven</h2>
 
           <p class="castText">We are Kyara and Kai, and we're the creators of Mindbound! This text is just a placeholder 
             for now to see if everything works, so I'll use this space to yap about our lord and savior, Reve.
             Reve Nox Craven is a major character in Mindbound, for He will end all our suffering and make all our dreams (And nightmares) come true!
             It is hard to imagine some might be against Him, for He is all knowing and incredibly charming.
-
-            
           </p>
+
+          <a href="javascript:history.back()" class="backButton">&lt;Back</a>
+
+          <img src="../altipianiImg/castFooterPlaceholder.png" alt="fooretCastImage" class="footerCastImg">
 
         </div>
 
@@ -63,7 +64,7 @@
         </footer>
     </main>
 
-<script src="functions/searchMap.js"></script>
+<script src="../../../functions/searchMap.js"></script>
 
 <script>
 // ====================
@@ -132,6 +133,32 @@ searchInput.addEventListener("keydown", function(e)
       alert("No results found for: " + query);
     }
   }
+});
+
+// ====================
+// Search suggestions
+// ====================
+
+const input = document.getElementById('searchInput');
+const suggestions = document.getElementById('suggestions');
+
+input.addEventListener('input', () => 
+{
+    const value = input.value.toLowerCase();
+    suggestions.innerHTML = '';
+    if (value) 
+    {
+        const filtered = Object.keys(searchMap).filter(name => name.startsWith(value));
+        filtered.forEach(name => 
+        {
+            const li = document.createElement('li');
+            li.textContent = name;
+            li.addEventListener('click', () => {
+                window.location.href = searchMap[name];
+            });
+            suggestions.appendChild(li);
+        });
+    }
 });
 </script>
 </body>
