Changed about us text and changed titles

--- a/nationPages/altipianiPages/castPages/reve.html
+++ b/nationPages/altipianiPages/castPages/reve.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mindbound</title>
+    <title>Reve - Mindbound</title>
     <link rel="stylesheet" href="../../cast.css" type="text/css">
     <!-- <link rel="icon" type="image/x-icon" href="../img/saturn.png"> -->
 </head>
@@ -15,7 +15,7 @@
                     <a class="info" href="#">Info</a>
                     <ul class="dropdownMenu">
                         <li><a href="../../nations.html">Nations</a></li>
-                        <li><a href="../../nations.html">Story</a></li>
+                        <li><a href="../../story.html">Story</a></li>
                         <li><a href="../../../index.html">Books</a></li>
                     </ul>
                 </li>
@@ -37,7 +37,7 @@
             
           <h2 class="secondTitle">Reve Nox Craven</h2>
 
-          <p class="castText">We are Kyara and Kai, and we're the creators of Mindbound! This text is just a placeholder 
+          <p class="castText">This text is just a placeholder 
             for now to see if everything works, so I'll use this space to yap about our lord and savior, Reve.
             Reve Nox Craven is a major character in Mindbound, for He will end all our suffering and make all our dreams (And nightmares) come true!
             It is hard to imagine some might be against Him, for He is all knowing and incredibly charming.
