--- a/webpages/aboutUs.html
+++ b/webpages/aboutUs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mindbound</title>
+    <title>About us - Mindbound</title>
     <link rel="stylesheet" href="../css/aboutUs.css" type="text/css">
     <!-- <link rel="icon" type="image/x-icon" href="../img/saturn.png"> -->
 </head>
@@ -37,11 +37,31 @@
             
             <h2 class="secondTitle">About us</h2>
 
-            <p class="aboutUsText">We are Kyara and Kai, and we're the creators of Mindbound! This text is just a placeholder 
-                for now to see if everything works, so I'll use this space to yap about our lord and savior, Reve.
-                Reve Nox Craven is a major character in Mindbound, for He will end all our suffering and make all our dreams (And nightmares) come true!
-                It is hard to imagine some might be against Him, for He is all knowing and incredibly charming.
-            </p>
+            <div class="aboutUsText">
+              <p>Heya! We're Kyara and Kai and we are the creators of Mindbound! We're currently still students 
+              and we always try to write more for Mindbound in between deadlines and exams. So we apologize in advance for the slow updates :')
+              </p>
+
+              <p>
+              Anyways! We're working hard on the main series of Mindbound, though, we're also working on some side stories as we speak! 
+              This will be a series we call The Silent Stories, and will focus on things outside of the main series which are canon, just not 
+              written about in detail. For example the infamous rune war, or what happened before the main story! We have a bunch of ideas, 
+              but we just need to work them all out haha.
+              </p>
+
+              <p>
+              A little fun fact about Mindbound actually, this all started out as a simple minecraft server! We were messing around with 
+              lore until we came up with what is now the story we're writing. We didn't expect to eventually post it online though, nor did 
+              we expect the support we got from fans! We're gradually expanding this little universe of ours, starting with this website and our 
+              discord server! (Which you can join by clicking the button at the end of the page!) We'll keep this site updated, adding new 
+              characters, lore, maybe even some easter eggs here and there.
+              </p>
+
+              <p>
+              For now, this is just a fun project for us to work on in our free time and it means a lot to us that so many of you liked it so far. 
+              We'd like to thank all our fans who stick around as we write, even if new chapters may take a while to finish haha.
+              </p>
+            </div>
 
             <a class="gooberKai" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
             <img class="gooberKai" src="../img/gooberKai.png" alt="KaiSprite">
