--- a/nationPages/nations.html
+++ b/nationPages/nations.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mindbound</title>
+    <title>Nations - Mindbound</title>
     <link rel="stylesheet" href="../css/nations.css" type="text/css">
     <!-- <link rel="icon" type="image/x-icon" href="../img/saturn.png"> -->
 </head>
