--- a/nationPages/nations.html
+++ b/nationPages/nations.html
@@ -52,14 +52,14 @@
             </ul>
 
             <ul class="nationListRight">
-                <li><a class="altipiani" href="./midprotPages/midprotMainpage.html">Midprot</a></li>
-                <li><a class="altipiani" href="./nesgenPages/nesgenMainpage.html">Nesgen</a></li>
-                <li><a class="altipiani" href="./kokkaPages/kokkaMainpage.html">Shokuminchi kokka</a></li>
-                <li><a class="altipiani" href="./sothleighPages/sothleighMainpage.html">Sothleigh</a></li>
-                <li><a class="altipiani" href="./terpayatrePages/terpayatreMainpage.html">Terpayâtre</a></li>
-                <li><a class="altipiani" href="./wastelandPages/wastelandMainpage.html">The Wasteland</a></li>
-                <li><a class="altipiani" href="./vrieslandPages/vrieslandMainpage.html">Vriesland</a></li>
-                <li><a class="altipiani" href="./zloyvorPages/zloyvorMainpage.html">Zloyvor</a></li>
+                <li><a class="midprot" href="./midprotPages/midprotMainpage.html">Midprot</a></li>
+                <li><a class="nesgen" href="./nesgenPages/nesgenMainpage.html">Nesgen</a></li>
+                <li><a class="kokka" href="./kokkaPages/kokkaMainpage.html">Shokuminchi kokka</a></li>
+                <li><a class="sothleigh" href="./sothleighPages/sothleighMainpage.html">Sothleigh</a></li>
+                <li><a class="terpayatre" href="./terpayatrePages/terpayatreMainpage.html">Terpayâtre</a></li>
+                <li><a class="wasteland" href="./wastelandPages/wastelandMainpage.html">The Wasteland</a></li>
+                <li><a class="vriesland" href="./vrieslandPages/vrieslandMainpage.html">Vriesland</a></li>
+                <li><a class="zloyvor" href="./zloyvorPages/zloyvorMainpage.html">Zloyvor</a></li>
             </ul>
         </div>
 
