--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mindbound</title>
     <link rel="stylesheet" href="css/mainpage.css" type="text/css">
-    <!-- <link rel="icon" type="image/x-icon" href="../img/saturn.png"> -->
+     <link rel="icon" type="image/x-icon" href="img/favi.png">
 </head>
 <body>
     <main>
