--- a/nationPages/altipianiPages/altipianiMainpage.html
+++ b/nationPages/altipianiPages/altipianiMainpage.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Altipiani - Mindbound</title>
     <link rel="stylesheet" href="../nation.css" type="text/css">
-    <!-- <link rel="icon" type="image/x-icon" href="../img/saturn.png"> -->
+     <link rel="icon" type="image/x-icon" href="../../img/favi.png">
 </head>
 <body>
     <main>
