Fixed dark/light mode bug

--- a/nationPages/zloyvorPages/zloyvorMainpage.html
+++ b/nationPages/zloyvorPages/zloyvorMainpage.html
@@ -61,12 +61,12 @@
             </a>
 
             <!-- Mnemos -->
-            <a href="./castPages/mnenos.html" class="castCoverThree">
-                <img src="zloyvorImg/placeholder.png" alt="mnenosCover">
+            <a href="./castPages/mnemos.html" class="castCoverThree">
+                <img src="zloyvorImg/placeholder.png" alt="mnemosCover">
             </a>
 
-            <a class="castTextThree" href="./castPages/mnenos.html">
-                <p>Mnenos</p>
+            <a class="castTextThree" href="./castPages/mnemos.html">
+                <p>Mnemos</p>
             </a>
 
             <!-- Ruka -->
