Added Silent Stories link

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </header>
 
         <h1 class="mainTitle">Mindbound</h1>
+        
         <img src="img/headerImg.png" alt="headerImage" class="headerImg">
 
         <div class="middleBlock">
@@ -56,7 +57,7 @@
 
             <!-- Silent Stories -->
             <div class="bookStack ss">
-                <a href="#" class="bookOneCover">
+                <a href="https://www.wattpad.com/story/370999206-mindbound-silent-stories" class="bookOneCover">
                     <img src="img/bookCover.png" alt="ssBookOneCover">
                 </a>
 
@@ -69,7 +70,7 @@
                 </a>
             </div>
 
-            <a class="ssText" href="https://www.wattpad.com/story/368390914-mindbound-inaugurate">
+            <a class="ssText" href="https://www.wattpad.com/story/370999206-mindbound-silent-stories">
                 <p>Silent Stories</p>
             </a>
 
