Changed links and descriptions

--- a/nationPages/zloyvorPages/castPages/anastasia.html
+++ b/nationPages/zloyvorPages/castPages/anastasia.html
@@ -37,10 +37,9 @@
             
           <h2 class="secondTitle">Anastasia</h2>
 
-          <p class="castText">This text is just a placeholder 
-            for now to see if everything works, so I'll use this space to yap about our lord and savior, Reve.
-            Reve Nox Craven is a major character in Mindbound, for He will end all our suffering and make all our dreams (And nightmares) come true!
-            It is hard to imagine some might be against Him, for He is all knowing and incredibly charming.
+          <p class="castText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, laboriosam. Accusamus quaerat ea et officiis quia sed numquam, 
+            laudantium harum maiores deleniti, vitae cum ab architecto officia dolor enim ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, laboriosam. Accusamus quaerat ea et officiis quia sed numquam, 
+            laudantium harum maiores deleniti, vitae cum ab architecto officia dolor enim ad.
           </p>
 
           <a href="javascript:history.back()" class="backButton">&lt;Back</a>
