--- a/webpages/aboutUs.html
+++ b/webpages/aboutUs.html
@@ -63,7 +63,7 @@
               </p>
             </div>
 
-            <a class="gooberKai" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+            <a class="gooberKai" href="https://www.instagram.com/domennotorre?igsh=MWF6YWVoZnZ4OXhwNg==">
             <img class="gooberKai" src="../img/gooberKai.png" alt="KaiSprite">
             </a>
 
