Changed descriptions and fixed spelling errors

--- a/nationPages/altipianiPages/altipianiMainpage.html
+++ b/nationPages/altipianiPages/altipianiMainpage.html
@@ -37,7 +37,7 @@
             
             <h2 class="secondTitle">Altipiani</h2>
 
-            <p class="nationText">Known for it's futuristic architecture and technology, Altipiani 
+            <p class="nationText">Known for its futuristic architecture and technology, Altipiani 
               is one of the most advanced nations in Eperilet. Its people worship the god of space, also known as Dio del Vuoto or Vicenci. 
               Though, this god does not rule the nation, an Emperor is in charge of such. The Emperor's home is located in the capital, 
               Peaselio. One might expect a grand palace, but instead will encounter a towering skyscraper that dominates the skyline, 
@@ -88,7 +88,7 @@
 
         <footer>
             <div class="footerContainer">
-                <div class="footerTekst">
+                <div class="footerText">
                     <a href="https://discord.gg/Aw5rpJ3DN6">
                         <img src="../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
