--- a/nationPages/altipianiPages/castPages/reve.html
+++ b/nationPages/altipianiPages/castPages/reve.html
@@ -37,14 +37,16 @@
             
           <h2 class="secondTitle">Reve Nox Craven</h2>
 
-          <p class="castText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, laboriosam. Accusamus quaerat ea et officiis quia sed numquam, 
-            laudantium harum maiores deleniti, vitae cum ab architecto officia dolor enim ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, laboriosam. Accusamus quaerat ea et officiis quia sed numquam, 
-            laudantium harum maiores deleniti, vitae cum ab architecto officia dolor enim ad.
+          <p class="castText">Reve, also known as the second advisor to the Emperor and head of intelligence in the Edifice, 
+            is a carefree and unbothered soul. He does what he's told, but never without a teasing comment or joke to piss people off. 
+            Though he hardly ever takes things seriously, he knows when he should and will be there to assist right away. 
+            Reve isn't originally from Altipiani, though no one knows for sure where he's from. Some suspect the radiation tainted nation of 
+            Terpayâtre, yet he never confirms nor denies his nation of origin.
           </p>
 
           <a href="javascript:history.back()" class="backButton">&lt;Back</a>
 
-          <img src="../altipianiImg/castFooterPlaceholder.png" alt="fooretCastImage" class="footerCastImg">
+          <img src="../altipianiImg/castFooterPlaceholder.png" alt="footerCastImage" class="footerCastImg">
 
         </div>
 
@@ -53,7 +55,7 @@
 
         <footer>
             <div class="footerContainer">
-                <div class="footerTekst">
+                <div class="footerText">
                     <a href="https://discord.gg/Aw5rpJ3DN6">
                         <img src="../../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
