--- a/nationPages/zloyvorPages/castPages/anastasia.html
+++ b/nationPages/zloyvorPages/castPages/anastasia.html
@@ -37,14 +37,12 @@
             
           <h2 class="secondTitle">Anastasia</h2>
 
-          <p class="castText">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, laboriosam. Accusamus quaerat ea et officiis quia sed numquam, 
-            laudantium harum maiores deleniti, vitae cum ab architecto officia dolor enim ad. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, laboriosam. Accusamus quaerat ea et officiis quia sed numquam, 
-            laudantium harum maiores deleniti, vitae cum ab architecto officia dolor enim ad.
+          <p class="castText">A fierce huntress
           </p>
 
           <a href="javascript:history.back()" class="backButton">&lt;Back</a>
 
-          <img src="../zloyvorImg/castFooterPlaceholder.png" alt="fooretCastImage" class="footerCastImg">
+          <img src="../zloyvorImg/castFooterPlaceholder.png" alt="footerCastImage" class="footerCastImg">
 
         </div>
 
@@ -53,7 +51,7 @@
 
         <footer>
             <div class="footerContainer">
-                <div class="footerTekst">
+                <div class="footerText">
                     <a href="https://discord.gg/Aw5rpJ3DN6">
                         <img src="../../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
