--- a/nationPages/zloyvorPages/zloyvorMainpage.html
+++ b/nationPages/zloyvorPages/zloyvorMainpage.html
@@ -37,7 +37,13 @@
             
             <h2 class="secondTitle">Zloyvor</h2>
 
-            <p class="nationText"> Cool gothic nation
+            <p class="nationText"> Not much is known about Zloyvor in the other nations. 
+              Its inhabitants have been seen wearing dark cloths over their eyes, but other than that, 
+              the nations are none the wiser about what lies beyond the towering border walls. One of the things which is not publicly known, 
+              is the horrors that take over the nation once a year. Every October, Zloyvorians board up their windows, doors, anything that 
+              could be an entrance for the horrific creatures that roam the streets. They'll be forced to stay inside for weeks until the 
+              hunters have finally taken care of the monsters.
+
             </p>
 
             <h2 class="thirdTitle">Cast</h2>
@@ -84,7 +90,7 @@
 
         <footer>
             <div class="footerContainer">
-                <div class="footerTekst">
+                <div class="footerText">
                     <a href="https://discord.gg/Aw5rpJ3DN6">
                         <img src="../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
