--- a/webpages/aboutUs.html
+++ b/webpages/aboutUs.html
@@ -71,7 +71,7 @@
 
         <footer>
             <div class="footerContainer">
-                <div class="footerTekst">
+                <div class="footerText">
                     <a href="https://discord.gg/Aw5rpJ3DN6">
                         <img src="../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
