--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
         <footer>
             <div class="footerContainer">
-                <div class="footerTekst">
+                <div class="footerText">
                     <a href="https://discord.gg/Aw5rpJ3DN6">
                         <img src="img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
@@ -199,6 +199,7 @@ input.addEventListener('input', () =>
         });
     }
 });
+
 </script>
 
 </body>
