Added new Projects page + mobile version

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                         <li><a href="nationPages/nations.html">Nations</a></li>
                         <li><a href="webpages/storyInfo.html">Story</a></li>
                         <li><a href="index.html">Books</a></li>
+                        <li><a href="webpages/projects.html">Projects</a></li>
                     </ul>
                 </li>
                 <li class="searchBar">
