--- a/nationPages/zloyvorPages/castPages/mnemos.html
+++ b/nationPages/zloyvorPages/castPages/mnemos.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zloyvor - Mindbound</title>
-    <link rel="stylesheet" href="../nation.css" type="text/css">
-     <link rel="icon" type="image/x-icon" href="../../img/favi.png">
+    <title>Mnemos - Mindbound</title>
+    <link rel="stylesheet" href="../../cast.css" type="text/css">
+     <link rel="icon" type="image/x-icon" href="../../../img/favi.png">
 </head>
 <body>
     <main>
@@ -14,81 +14,39 @@
                 <li class="dropdown">
                     <a class="info" href="#">Info</a>
                     <ul class="dropdownMenu">
-                        <li><a href="../nations.html">Nations</a></li>
-                        <li><a href="../../webpages/storyInfo.html">Story</a></li>
-                        <li><a href="../../index.html">Books</a></li>
-                        <li><a href="../../webpages/projects.html">Projects</a></li>
+                        <li><a href="../../nations.html">Nations</a></li>
+                        <li><a href="../../../webpages/story.html">Story</a></li>
+                        <li><a href="../../../index.html">Books</a></li>
+                        <li><a href="../../../webpages/projects.html">Projects</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
                     <input type="text" id="searchInput" placeholder="Search..." />
                     <ul id="suggestions" class="suggestions"></ul>
                 </li>
-                <li><a class="aboutUs" href="../../webpages/aboutUs.html">About Us</a></li>  
+                <li><a class="aboutUs" href="../../../webpages/aboutUs.html">About Us</a></li>  
             </ul>
         </header>
 
         <h1 class="mainTitleWhite">Mindbound</h1>
         
-        <img src="zloyvorImg/zloyvorHeader.png" alt="headerImage" class="headerImg">
+        <img src="../zloyvorImg/zloyvorHeader.png" alt="headerImage" class="headerImg">
 
         <div class="middleBlock">
 
-            <a href="javascript:history.back()" class="backButton">&lt;Back</a>
+          <img src="../zloyvorImg/castPlaceholder.png" alt="castImage" class="sideCastImg">
             
-            <h2 class="secondTitle">Zloyvor</h2>
+          <h2 class="secondTitle">Mnemos Fallax Craven</h2>
 
-            <p class="nationText"> Not much is known about Zloyvor in the other nations. 
-              Its inhabitants have been seen wearing dark cloths over their eyes, but other than that, 
-              the nations are none the wiser about what lies beyond the towering border walls. One of the things which is not publicly known, 
-              is the horrors that take over the nation once a year. Every October, Zloyvorians board up their windows, doors, anything that 
-              could be an entrance for the horrific creatures that roam the streets. They'll be forced to stay inside for weeks until the 
-              hunters have finally taken care of the monsters.
+          <p class="castText">Just a second place trans guy
+          </p>
 
-            </p>
+          <a href="javascript:history.back()" class="backButton">&lt;Back</a>
 
-            <h2 class="thirdTitle">Cast</h2>
-
-            <div class="middleBlockLowerContent">
-
-            <!-- Anastasia -->
-            <a href="./castPages/anastasia.html" class="castCoverOne">
-                <img src="zloyvorImg/placeholder.png" alt="anastasiaCover">
-            </a>
-
-            <a class="castTextOne" href="./castPages/anastasia.html">
-                <p>Anastasia</p>
-            </a>
-
-            <!-- Irina -->
-            <a href="./castPages/irina.html" class="castCoverTwo">
-                <img src="zloyvorImg/placeholder.png" alt="irinaCover">
-            </a>
-
-            <a class="castTextTwo" href="./castPages/irina.html">
-                <p>Irina</p>
-            </a>
-
-            <!-- Mnemos -->
-            <a href="./castPages/mnemos.html" class="castCoverThree">
-                <img src="zloyvorImg/placeholder.png" alt="mnemosCover">
-            </a>
-
-            <a class="castTextThree" href="./castPages/mnemos.html">
-                <p>Mnemos</p>
-            </a>
-
-            <!-- Ruka -->
-            <a href="./castPages/ruka.html" class="castCoverFour">
-                <img src="zloyvorImg/placeholder.png" alt="rukaCover">
-            </a>
-
-            <a class="castTextFour" href="./castPages/ruka.html">
-                <p>Ruka</p>
-            </a>
-          </div>
+          <img src="../zloyvorImg/castFooterPlaceholder.png" alt="footerCastImage" class="footerCastImg">
 
         </div>
+
 
         </div>
 
@@ -96,15 +54,15 @@
             <div class="footerContainer">
                 <div class="footerText">
                     <a href="https://discord.gg/Aw5rpJ3DN6">
-                        <img src="../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
+                        <img src="../../../img/dcLogo.png" alt="discordLogo" class="dcLogo">
                     </a>
                 </div>
-                <img src="zloyvorImg/zloyvorFooter.png" alt="footerImage" class="footerImg">
+                <img src="../zloyvorImg/zloyvorFooter.png" alt="footerImage" class="footerImg">
             </div>
         </footer>
     </main>
 
-<script src="../../functions/searchMap.js"></script>
+<script src="../../../functions/searchMap.js"></script>
 
 <script>
 // ====================
