--- a/nationPages/altipianiPages/altipianiMainpage.html
+++ b/nationPages/altipianiPages/altipianiMainpage.html
@@ -15,8 +15,9 @@
                     <a class="info" href="#">Info</a>
                     <ul class="dropdownMenu">
                         <li><a href="../nations.html">Nations</a></li>
-                        <li><a href="webpages/storyInfo.html">Story</a></li>
+                        <li><a href="../../webpages/storyInfo.html">Story</a></li>
                         <li><a href="../../index.html">Books</a></li>
+                        <li><a href="../../webpages/projects.html">Projects</a></li>
                     </ul>
                 </li>
               <li class="searchBar">
@@ -45,6 +46,8 @@
             </p>
 
             <h2 class="thirdTitle">Cast</h2>
+
+            <div class="middleBlockLowerContent">
 
             <!-- Reve -->
             <a href="./castPages/reve.html" class="castCoverOne">
@@ -81,6 +84,7 @@
             <a class="castTextFour" href="./castPages/viviana.html">
                 <p>Viviana</p>
             </a>
+          </div>
 
         </div>
 
