Fixed nationgrids not scaling with mobile/desktops

--- a/webpages/projects.html
+++ b/webpages/projects.html
@@ -46,7 +46,7 @@
 
               <hr style="border: 0; height: 0.1rem; background-color: white; width: 75%; margin: 0px auto;">
 
-              <p class="updateLog">Added the new projects page and new character pages!</p>
+              <p class="updateLog">Fixed some grid issues.</p>
 
               <hr style="border: 0; height: 0.1rem; background-color: white; width: 75%; margin: 0px auto;">
               
