Added socials to the aboutUs page

--- a/webpages/aboutUs.html
+++ b/webpages/aboutUs.html
@@ -38,6 +38,22 @@
             
             <h2 class="secondTitle">About us</h2>
 
+
+            <span class="aboutUsLinks">
+
+            <hr style="border: 0; height: 0.1rem; background-color: white; width: 90%; margin: 0px auto;">
+
+            <p>Find us on:</p>
+
+            <a class="wpLink" href="https://www.wattpad.com/user/Domen-No-Torre">Wattpad</a> <span> - </span>
+            <a class="dcLink" href="https://discord.gg/Aw5rpJ3DN6">Discord</a> <span> - </span>
+            <a class="sdLink" href="https://www.minecraftskins.com/profile/8549244/domennotorre">Skindex</a> <span> - </span>
+            <a class="igLink" href="https://www.instagram.com/domennotorre?igsh=MWF6YWVoZnZ4OXhwNg==">Instagram</a>
+
+            <hr style="border: 0; height: 0.1rem; background-color: white; width: 80%; margin: 2rem auto;">
+            </span> 
+            
+
             <div class="aboutUsText">
               <p>Heya! We're Kyara and Kai and we are the creators of Mindbound! We're currently still students 
               and we always try to write more for Mindbound in between deadlines and exams. So we apologize in advance for the slow updates :')
