Adjusted font size and added extra styling.

--- a/webpages/aboutUs.html
+++ b/webpages/aboutUs.html
@@ -15,7 +15,6 @@
                     <a class="info" href="#">Info</a>
                     <ul class="dropdownMenu">
                         <li><a href="../nationPages/nations.html">Nations</a></li>
-                        <li><a href="storyInfo.html">Story</a></li>
                         <li><a href="../index.html">Books</a></li>
                         <li><a href="projects.html">Projects</a></li>
                     </ul>
@@ -41,7 +40,7 @@
 
             <span class="aboutUsLinks">
 
-            <hr style="border: 0; height: 0.1rem; background-color: white; width: 90%; margin: 0px auto;">
+            <hr style="border: 0; border-top: 0.1rem solid white; width: 90%; margin: 0px auto;">
 
             <p>Find us on:</p>
 
@@ -50,7 +49,7 @@
             <a class="sdLink" href="https://www.minecraftskins.com/profile/8549244/domennotorre">Skindex</a> <span> - </span>
             <a class="igLink" href="https://www.instagram.com/domennotorre?igsh=MWF6YWVoZnZ4OXhwNg==">Instagram</a>
 
-            <hr style="border: 0; height: 0.1rem; background-color: white; width: 80%; margin: 2rem auto;">
+            <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 2rem auto;">
             </span> 
             
 
