--- a/webpages/projects.html
+++ b/webpages/projects.html
@@ -15,7 +15,6 @@
                     <a class="info" href="#">Info</a>
                     <ul class="dropdownMenu">
                         <li><a href="../nationPages/nations.html">Nations</a></li>
-                        <li><a href="storyInfo.html">Story</a></li>
                         <li><a href="../index.html">Books</a></li>
                         <li><a href="projects.html">Projects</a></li>
                     </ul>
@@ -44,11 +43,11 @@
             <div class="projectsUpdate">
               <h2>Project Updates</h2>
 
-              <hr style="border: 0; height: 0.1rem; background-color: white; width: 75%; margin: 0px auto;">
+              <hr style="border: 0; border-top: 0.1rem solid white; width: 75%; margin: 0px auto;">
 
-              <p class="updateLog">Added our socials to the About us page.</p>
+              <p class="updateLog">Adjusted the font size on some pages and added extra styling.</p>
 
-              <hr style="border: 0; height: 0.1rem; background-color: white; width: 75%; margin: 0px auto;">
+              <hr style="border: 0; border-top: 0.1rem solid white; width: 75%; margin: 0px auto;">
               
               <p id="updateInfo">Loading...</p>
 
