--- a/nationPages/nations.html
+++ b/nationPages/nations.html
@@ -15,7 +15,6 @@
                     <a class="info" href="#">Info</a>
                     <ul class="dropdownMenu">
                         <li><a href="nations.html">Nations</a></li>
-                        <li><a href="../webpages/storyInfo.html">Story</a></li>
                         <li><a href="../index.html">Books</a></li>
                         <li><a href="../webpages/projects.html">Projects</a></li>
                     </ul>
@@ -37,9 +36,14 @@
             <a href="javascript:history.back()" class="backButton">&lt;Back</a>
             
             <h2 class="secondTitle">Nations</h2>
+            
+            <span style="grid-column: 1/5;">
+            <hr style="border: 0; border-top: 0.1rem solid white; width: 90%; margin: 2rem auto;">
             <p class="shortText">
-                Find all the info you want about your favorite nation and its inhabitants here!
+                Find all the info you need about your favorite nation and its inhabitants here!
             </p>
+            <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 2rem auto;">
+          </span>
 
             <ul class="nationListLeft">
                 <li><a class="altipiani" href="./altipianiPages/altipianiMainpage.html">Altipiani</a></li>
