Revert "Added nationPages and removed pics"
This reverts commit 5fa8b2fb3fa02d064d715112cf5d343d07a5b770.

--- a/nationPages/zloyvorPages/castPages/anastasia.html
+++ b/nationPages/zloyvorPages/castPages/anastasia.html
@@ -46,6 +46,9 @@
 
         </div>
 
+
+        </div>
+
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
