--- a/nationPages/zloyvorPages/zloyvorMainpage.html
+++ b/nationPages/zloyvorPages/zloyvorMainpage.html
@@ -50,42 +50,44 @@
 
             <div class="middleBlockLowerContent">
 
-              <!-- Anastasia -->
-              <a href="./castPages/anastasia.html" class="castCoverOne">
-                  <img src="zloyvorImg/placeholder.png" alt="anastasiaCover">
-              </a>
+            <!-- Anastasia -->
+            <a href="./castPages/anastasia.html" class="castCoverOne">
+                <img src="zloyvorImg/placeholder.png" alt="anastasiaCover">
+            </a>
 
-              <a class="castTextOne" href="./castPages/anastasia.html">
-                  <p>Anastasia</p>
-              </a>
+            <a class="castTextOne" href="./castPages/anastasia.html">
+                <p>Anastasia</p>
+            </a>
 
-              <!-- Irina -->
-              <a href="./castPages/irina.html" class="castCoverTwo">
-                  <img src="zloyvorImg/placeholder.png" alt="irinaCover">
-              </a>
+            <!-- Irina -->
+            <a href="./castPages/irina.html" class="castCoverTwo">
+                <img src="zloyvorImg/placeholder.png" alt="irinaCover">
+            </a>
 
-              <a class="castTextTwo" href="./castPages/irina.html">
-                  <p>Irina</p>
-              </a>
+            <a class="castTextTwo" href="./castPages/irina.html">
+                <p>Irina</p>
+            </a>
 
-              <!-- Mnemos -->
-              <a href="./castPages/mnemos.html" class="castCoverThree">
-                  <img src="zloyvorImg/placeholder.png" alt="mnemosCover">
-              </a>
+            <!-- Mnemos -->
+            <a href="./castPages/mnemos.html" class="castCoverThree">
+                <img src="zloyvorImg/placeholder.png" alt="mnemosCover">
+            </a>
 
-              <a class="castTextThree" href="./castPages/mnemos.html">
-                  <p>Mnemos</p>
-              </a>
+            <a class="castTextThree" href="./castPages/mnemos.html">
+                <p>Mnemos</p>
+            </a>
 
-              <!-- Ruka -->
-              <a href="./castPages/ruka.html" class="castCoverFour">
-                  <img src="zloyvorImg/placeholder.png" alt="rukaCover">
-              </a>
+            <!-- Ruka -->
+            <a href="./castPages/ruka.html" class="castCoverFour">
+                <img src="zloyvorImg/placeholder.png" alt="rukaCover">
+            </a>
 
-              <a class="castTextFour" href="./castPages/ruka.html">
-                  <p>Ruka</p>
-              </a>
+            <a class="castTextFour" href="./castPages/ruka.html">
+                <p>Ruka</p>
+            </a>
           </div>
+
+        </div>
 
         </div>
 
