--- a/nationPages/altipianiPages/castPages/reve.html
+++ b/nationPages/altipianiPages/castPages/reve.html
@@ -50,6 +50,9 @@
 
         </div>
 
+
+        </div>
+
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
