--- a/nationPages/zloyvorPages/castPages/mnemos.html
+++ b/nationPages/zloyvorPages/castPages/mnemos.html
@@ -46,6 +46,9 @@
 
         </div>
 
+
+        </div>
+
         <footer>
             <div class="footerContainer">
                 <div class="footerText">
