Added new book page + cleanUp

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
             <!-- Main Series -->
             <div class="bookStack">
-                <a href="https://www.wattpad.com/story/368390914-mindbound-inaugurate" class="bookOneCover">
+                <a href="webpages/msInfo.html" class="bookOneCover">
                     <img src="img/bookCover.png" alt="msbookOneCover">
                 </a>
 
@@ -50,7 +50,7 @@
                 </a>
             </div>
 
-            <a class="msText" href="https://www.wattpad.com/story/368390914-mindbound-inaugurate">
+            <a class="msText" href="webpages/msInfo.html">
                 <p>Main Series</p>
             </a>
 
