--- a/nationPages/nations.html
+++ b/nationPages/nations.html
@@ -40,7 +40,7 @@
             <span style="grid-column: 1/5;">
             <hr style="border: 0; border-top: 0.1rem solid white; width: 90%; margin: 2rem auto;">
             <p class="shortText">
-                Find all the info you need about your favorite nation and its inhabitants here!
+              Find all the info you need about your favorite nation and its inhabitants here!
             </p>
             <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 2rem auto;">
           </span>
@@ -52,20 +52,23 @@
                 <li><a class="chuma" href="./chumaPages/chumaMainpage.html">Chuma Baidisha</a></li>
                 <li><a class="farostia" href="./farostiaPages/farostiaMainpage.html">Farostia</a></li>
                 <li><a class="granskog" href="./granskogPages/granskogMainpage.html">Granskog</a></li>
-                <li><a class="riimut" href="./riimutPages/riimutMainpage.html">Jäädytetyt riimut</a></li>
+                <li><a class="riimut" href="./riimutPages/riimutMainpage.html">Jäädytetyt Riimut</a></li>
                 <li><a class="leidrubreich" href="./leidrubreichPages/leidrubreichMainpage.html">Leidrübreich</a></li>
             </ul>
 
             <ul class="nationListRight">
                 <li><a class="midprot" href="./midprotPages/midprotMainpage.html">Midprot</a></li>
                 <li><a class="nesgen" href="./nesgenPages/nesgenMainpage.html">Nesgen</a></li>
-                <li><a class="kokka" href="./kokkaPages/kokkaMainpage.html">Shokuminchi kokka</a></li>
+                <li><a class="kokka" href="./kokkaPages/kokkaMainpage.html">Shokuminchi Kokka</a></li>
                 <li><a class="sothleigh" href="./sothleighPages/sothleighMainpage.html">Sothleigh</a></li>
                 <li><a class="terpayatre" href="./terpayatrePages/terpayatreMainpage.html">Terpayâtre</a></li>
                 <li><a class="wasteland" href="./wastelandPages/wastelandMainpage.html">The Wasteland</a></li>
                 <li><a class="vriesland" href="./vrieslandPages/vrieslandMainpage.html">Vriesland</a></li>
                 <li><a class="zloyvor" href="./zloyvorPages/zloyvorMainpage.html">Zloyvor</a></li>
             </ul>
+            <a class="allCharLink" href="../webpages/allCharacters.html">
+                See all characters
+              </a>
         </div>
 
         <footer>
