--- a/webpages/msInfo.html
+++ b/webpages/msInfo.html
@@ -33,13 +33,24 @@
 
             <div class="middleBlock">
 
-                <a href="javascript:history.back()" class="backButton">&lt;Back</a>
+                <a href="../index.html" class="backButton">&lt;Back</a>
                     
                 <h2 class="secondTitle">Main Series</h2>
+                <span class="bookDirectors">
+
+                  <hr style="border: 0; border-top: 0.1rem solid white; width: 90%; margin: 0px auto;">
+
+                  <p>Find book:</p>
+
+                  <a class="bookOneDirector" href="#bookOne">Inaugurate</a> <span> - </span>
+                  <a class="bookTwoDirector" href="#">More will be added later!</a>
+
+                  <hr style="border: 0; border-top: 0.1rem solid white; width: 80%; margin: 2rem auto;">
+                </span> 
 
                 <div class="middleBlockLowerContent">
 
-                    <h3 class="bookTitleOne">Inaugurate</h3>
+                    <h3 class="bookTitleOne" id="bookOne">Inaugurate</h3>
 
                     <img src="../img/storyInfoBookCover.png" alt="bookCoverImg" class="bookCoverImgOne">
 
